--- a/index.html
+++ b/index.html
@@ -272,18 +272,18 @@
 
           <div class="menu__item pages">
             <div class="pages__item">
-              <button id="theme-toggle"><em></em> Theme</button>
-            </div>
-
-            <div class="pages__item">
               <a href="./information/" class="page--information">
                 Information
               </a>
             </div>
 
-            <div class="legal">
+            <div class="pages__item">
+              <a href="./legal-notice/"> Legal Notice </a>
+            </div>
+
+            <div class="menu_bottom">
               <div class="pages__item">
-                <a href="./legal-notice/"> Legal Notice </a>
+                <button id="theme-toggle"><em></em> Toggle theme</button>
               </div>
 
               <!-- <div class="pages__item">
