--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             class="mix mapping__item"
             data-project="9"
             data-link="./newflavorsoftea/1-1-cjh-c/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -393,7 +393,7 @@
             class="mix mapping__item"
             data-project="9"
             data-link="./newflavorsoftea/1-1-cjh-c/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -435,7 +435,7 @@
             class="mix mapping__item"
             data-project="9"
             data-link="./newflavorsoftea/1-1-cjh-c/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -477,7 +477,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -519,7 +519,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -561,7 +561,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -603,7 +603,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -645,7 +645,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -687,7 +687,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -729,7 +729,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -771,7 +771,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -813,7 +813,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -855,7 +855,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -897,7 +897,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -939,7 +939,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -981,7 +981,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1023,7 +1023,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1065,7 +1065,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1107,7 +1107,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1149,7 +1149,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1191,7 +1191,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1233,7 +1233,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1275,7 +1275,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1317,7 +1317,7 @@
             class="mix mapping__item"
             data-project="7"
             data-link="./newflavorsoftea/1-1-cjh-t/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1359,7 +1359,7 @@
             class="mix mapping__item"
             data-project="7"
             data-link="./newflavorsoftea/1-1-cjh-t/"
-            data-dominantcolor-hex="#B39E5D"
+            data-dominantcolor-hex="#C84903"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1697,7 +1697,7 @@
             class="mix mapping__item"
             data-project="3"
             data-link="./newflavorsoftea/1-1-kjh-c/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1739,7 +1739,7 @@
             class="mix mapping__item"
             data-project="3"
             data-link="./newflavorsoftea/1-1-kjh-c/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1780,7 +1780,7 @@
             class="mix mapping__item"
             data-project="3"
             data-link="./newflavorsoftea/1-1-kjh-c/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1821,7 +1821,7 @@
             class="mix mapping__item"
             data-project="3"
             data-link="./newflavorsoftea/1-1-kjh-c/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1863,7 +1863,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1905,7 +1905,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1947,7 +1947,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1989,7 +1989,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2031,7 +2031,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2073,7 +2073,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2115,7 +2115,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2157,7 +2157,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2199,7 +2199,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2241,7 +2241,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2283,7 +2283,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2324,7 +2324,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2365,7 +2365,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#65615E"
+            data-dominantcolor-hex="#84733E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
