--- a/information/index.html
+++ b/information/index.html
@@ -471,7 +471,7 @@
                     href="https://www.sansuhwa.com"
                     target="_blank"
                     rel="noopener noreferrer"
-                    >sansuhwa.com</a
+                    ><span>→</span> sansuhwa.com</a
                   >
                 </p>
               </div>
@@ -485,7 +485,21 @@
                     href="https://archive.sansuhwa.com"
                     target="_blank"
                     rel="noopener noreferrer"
-                    >archive.sansuhwa.com</a
+                    ><span>→</span> archive.sansuhwa.com</a
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="more__item">
+              <p class="more__item__header">* Sansuhwa Instagram</p>
+
+              <div class="more__item__text">
+                <p>
+                  <a
+                    href="https://www.instagram.com/sansuhwatea"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    ><span>→</span> @sansuhwatea</a
                   >
                 </p>
               </div>
