--- a/information/index.html
+++ b/information/index.html
@@ -309,9 +309,32 @@
           </div>
 
           <div class="information__cv__wapper">
+            <div class="information__video">
+            
+              <video playsinline controls>
+                <source
+                  src="https://ik.imagekit.io/11195/public/pado_1-1_talk-web.webm/ik-video.mp4?updatedAt=1734681575096"
+                  type="video/webm"
+                />
+
+                <source
+                  src="https://ik.imagekit.io/11195/public/pado_1-1_talk-web.mp4?updatedAt=1734681577723"
+                  type="video/mp4"
+                />
+              </video>
+
+                <h1>↘ 작가와의 만남 자리 일부 영상</h1>
+              <p>
+                ˹데이터를 많이 소모할 수 있으니 와이파이 환경에서 재생해주세요.˼
+              </p>
+
+            </div>
+
             <div class="information__item information__cv cv--left">
               <div class="cv__item">
-                <p class="cv__item__header">1-1 새로운 차의 맛</p>
+                <p class="cv__item__header">
+                  파도<sup>1-1</sup> 새로운 차의 맛
+                </p>
                 <p class="cv__item__header">김종훈 | 조장현 | 홍우경</p>
 
                 <div class="cv__item__text">
@@ -347,7 +370,9 @@
 
             <div class="information__item information__cv cv--right">
               <div class="cv__item">
-                <p class="cv__item__header">1-1 New flavors of tea</p>
+                <p class="cv__item__header">
+                  PADO<sup>1-1</sup> New flavors of tea
+                </p>
                 <p class="cv__item__header">
                   Kim Jong-Hun | Cho Jang-Hyun | Hong Woo-Kyung
                 </p>
@@ -426,42 +451,6 @@
               </div>
             </div>
 
-            <!-- <div class="more__item">
-              <p class="more__item__header">Text</p>
-
-              <div class="more__item__text">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
-                </p>
-              </div>
-            </div> -->
-
-            <!-- <div class="more__item">
-              <p class="more__item__header">text</p>
-
-              <div class="more__item__text">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
-                </p>
-              </div>
-            </div> -->
-          </div>
-
-          <div class="information__item information__more more--right">
             <div class="more__item">
               <p class="more__item__header">* Sansuhwa Website</p>
 
@@ -504,7 +493,26 @@
                 </p>
               </div>
             </div>
+
+            <!-- <div class="more__item">
+              <p class="more__item__header">Text</p>
+
+              <div class="more__item__text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
+                </p>
+              </div>
+            </div> -->
           </div>
+
+          <!-- <div class="information__item information__more more--right"></div> -->
         </div>
       </main>
     </div>
