--- a/information/index.html
+++ b/information/index.html
@@ -282,7 +282,7 @@
 
           <div class="page__title">
             <a href="" target="_self" rel="noopener noreferrer">
-              Information
+             시대기물연구소 〈파도〉
             </a>
           </div>
         </div>
