--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           <div class="menu__item pages">
             <div class="pages__item">
               <a href="./information/" class="page--information">
-                Information
+                Information<sup>Update</sup>
               </a>
             </div>
 
@@ -330,7 +330,11 @@
         </div> -->
 
         <!-- contents -->
+        
         <div id="mapping">
+
+
+        
           <!-- newflavorsoftea/1-1-cjh -->
           <div
             class="mix mapping__item"
