--- a/information/index.html
+++ b/information/index.html
@@ -253,7 +253,9 @@
 
           <div class="menu__item pages">
             <div class="pages__item">
-              <a href="./" class="page--information"> Information </a>
+              <a href="./" class="page--information">
+                Information<sup>Update</sup>
+              </a>
             </div>
 
             <div class="pages__item">
