--- a/legal-notice/index.html
+++ b/legal-notice/index.html
@@ -254,7 +254,7 @@
           <div class="menu__item pages">
             <div class="pages__item">
               <a href="../information/" class="page--information">
-                Information
+                Information<sup>Update</sup>
               </a>
             </div>
 
