--- a/information/index.html
+++ b/information/index.html
@@ -313,7 +313,7 @@
           <div class="information__cv__wapper">
             <div class="information__video">
             
-              <video playsinline controls>
+              <video playsinline controls poster="../assets/img/video-poster.jpg" width="100%">
                 <source
                   src="https://ik.imagekit.io/11195/public/pado_1-1_talk-web.webm/ik-video.mp4?updatedAt=1734681575096"
                   type="video/webm"
