--- a/information/index.html
+++ b/information/index.html
@@ -284,7 +284,7 @@
 
           <div class="page__title">
             <a href="" target="_self" rel="noopener noreferrer">
-             시대기물연구소 〈파도〉
+              시대기물연구소 〈파도〉
             </a>
           </div>
         </div>
@@ -312,8 +312,12 @@
 
           <div class="information__cv__wapper">
             <div class="information__video">
-            
-              <video playsinline controls poster="../assets/img/video-poster.jpg" width="100%">
+              <video
+                playsinline
+                controls
+                poster="../assets/img/video-poster.jpg"
+                width="100%"
+              >
                 <source
                   src="https://ik.imagekit.io/11195/public/pado_1-1_talk-web.webm/ik-video.mp4?updatedAt=1734681575096"
                   type="video/webm"
@@ -325,11 +329,10 @@
                 />
               </video>
 
-                <h1>↘ 작가와의 만남 자리 일부 영상</h1>
+              <h1><sup>↘</sup> 작가와의 만남 자리 일부 영상</h1>
               <p>
                 ˹데이터를 많이 소모할 수 있으니 와이파이 환경에서 재생해주세요.˼
               </p>
-
             </div>
 
             <div class="information__item information__cv cv--left">
