--- a/information/index.html
+++ b/information/index.html
@@ -312,22 +312,31 @@
 
           <div class="information__cv__wapper">
             <div class="information__video">
-              <video
+              <iframe
+                src="https://player.vimeo.com/video/1041306227?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                width="420"
+                height="746"
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+                title="시대기물연구소 〈파도〉 1-1. 새로운 차의 맛, 작가와의 만남"
+              ></iframe>
+
+              <!-- <video
                 playsinline
                 controls
                 poster="../assets/img/video-poster.jpg"
                 width="100%"
               >
                 <source
-                  src="https://ik.imagekit.io/11195/public/pado_1-1_talk-web.webm/ik-video.mp4?updatedAt=1734681575096"
+                  src="../assets/img/pado_1-1_talk-web.webm"
                   type="video/webm"
                 />
 
                 <source
-                  src="https://ik.imagekit.io/11195/public/pado_1-1_talk-web.mp4?updatedAt=1734681577723"
+                  src="../assets/img/pado_1-1_talk-web.mp4"
                   type="video/mp4"
                 />
-              </video>
+              </video> -->
 
               <h1><sup>↘</sup> 작가와의 만남 자리 일부 영상</h1>
               <p>
