--- a/information/index.html
+++ b/information/index.html
@@ -292,7 +292,7 @@
         <div id="information">
           <div class="information__item information__text">
             <p>
-              시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의
+              시대기물연구소 〈파도〉 는 전통의 깊은 토대 위에서 지금 이 시대의
               이야기를 담는 기물을 연구하고 제안합니다. 새로운 도구의 제안으로
               사람들이 도구를 사용하는 행위에도 변화가 일어날 것입니다.
             </p>
@@ -340,7 +340,8 @@
 
               <h1><sup>↘</sup> 작가와의 만남 자리 일부 영상</h1>
               <p>
-                ˹데이터를 많이 소모할 수 있으니 와이파이 환경에서 재생해주세요.˼
+                ˹ 데이터를 많이 소모할 수 있으니 와이파이 환경에서 재생해주세요
+                ˼
               </p>
             </div>
 
