--- a/information/index.html
+++ b/information/index.html
@@ -264,7 +264,7 @@
 
             <div class="menu_bottom">
               <div class="pages__item">
-                <button id="theme-toggle"><em></em> Toggle theme</button>
+                <button id="theme-toggle"><em></em> Dark/Light mode</button>
               </div>
 
               <!-- <div class="pages__item">
