--- a/backup/privacy-policy/index.html
+++ b/backup/privacy-policy/index.html
@@ -212,7 +212,7 @@
 
           <div class="menu__item pages">
                <div class="pages__item">
-              <button id="theme-toggle"><em></em> Toggle theme</button>
+              <button id="theme-toggle"><em></em> Dark/Light mode</button>
             </div>
 
             <div class="pages__item">
