--- a/index.html
+++ b/index.html
@@ -180,6 +180,15 @@
           </div>
         </div>
       </header>
+ 
+      <aside>
+        <dialog open>
+          <p><a href="./information/#video1">1-1. 새로운 차의 맛: 작가와의 만남 영상 보기</a></p>
+          <form method="dialog">
+            <button autofocus>Close</button>
+          </form>
+        </dialog>
+      </aside>
 
       <div id="menu__header" class="hidden mobile"></div>
 
