--- a/information/index.html
+++ b/information/index.html
@@ -311,7 +311,7 @@
           </div>
 
           <div class="information__cv__wapper">
-            <div class="information__video">
+            <div id="video1" class="information__video">
               <iframe
                 src="https://player.vimeo.com/video/1041306227?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
                 width="420"
