--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             class="mix mapping__item"
             data-project="9"
             data-link="./newflavorsoftea/1-1-cjh-c/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -392,7 +392,7 @@
             class="mix mapping__item"
             data-project="9"
             data-link="./newflavorsoftea/1-1-cjh-c/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -434,7 +434,7 @@
             class="mix mapping__item"
             data-project="9"
             data-link="./newflavorsoftea/1-1-cjh-c/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -476,7 +476,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -518,7 +518,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -560,7 +560,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -597,12 +597,12 @@
               </div>
             </div>
           </div>
-
+  
           <div
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -644,7 +644,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -686,7 +686,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -728,7 +728,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -770,7 +770,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -812,7 +812,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -854,7 +854,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -896,7 +896,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -938,7 +938,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -980,7 +980,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1022,7 +1022,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1064,7 +1064,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1106,7 +1106,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1148,7 +1148,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1190,7 +1190,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1232,7 +1232,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1274,7 +1274,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1316,7 +1316,7 @@
             class="mix mapping__item"
             data-project="7"
             data-link="./newflavorsoftea/1-1-cjh-t/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1358,7 +1358,7 @@
             class="mix mapping__item"
             data-project="7"
             data-link="./newflavorsoftea/1-1-cjh-t/"
-            data-dominantcolor-hex="#C84903"
+            data-dominantcolor-hex="#E95504"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
