--- a/newflavorsoftea/1-1-cjh-c/index.html
+++ b/newflavorsoftea/1-1-cjh-c/index.html
@@ -145,10 +145,33 @@
   </head>
 
   <body class="default">
+    <section class="project__loading">
+      <div class="load__info">
+        <div class="zoom">
+          <img class="zoom-finger" src="../../assets/img/swipe.svg" />
+          <p class="zoom-text">
+            <span>한 손가락을 움직여 확대합니다.</span>
+            <span>Move one finger over the image to zoom in.</span>
+          </p>
+        </div>
+        <div class="swipe">
+          <img class="swipe-finger-1" src="../../assets/img/zoom.svg" />
+          <img class="swipe-finger-2" src="../../assets/img/zoom.svg" />
+
+          <p class="swipe-text">
+            <span>양쪽을 탭하면 이전 / 다음 이미지를 볼 수 있습니다.</span>
+            <span>Tap either side(left/right) to see the prev/next image.</span>
+          </p>
+        </div>
+
+        <button>Skip</button>
+      </div>
+    </section>
+
     <div class="overflow__wrapper">
       <header id="header">
         <div class="header__sitetitle">
-          <div class="header__sitetitle__item item--1" data-sort="random">
+          <div class="header__sitetitle__item item--1">
             <a href="../../"><img src="../../assets/img/logo2.svg" /></a>
           </div>
         </div>
@@ -502,7 +525,7 @@
               <div class="slideshow__counter">
                 <div class="counter__wrapper">
                   <div class="counter__item counter--current">
-                    <span class="counter__projectnumber">1-1-CJH-T</span>
+                    <span class="counter__projectnumber">1-1-CJH-C</span>
                     &nbsp;&nbsp;
 
                     <span class="counter__current hidden"></span>
@@ -806,5 +829,7 @@
 
     <script src="../../assets/js/detail-attr.js"></script>
     <script src="../../assets/js/detail-functions.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+    <script src="../../assets/js/load.js"></script>
   </body>
 </html>
