--- a/newflavorsoftea/1-1-kjh-c/index.html
+++ b/newflavorsoftea/1-1-kjh-c/index.html
@@ -148,15 +148,15 @@
 <section class="project__loading">
       <div class="load__info">
         <div class="zoom">
-          <img class="zoom-finger" src="../../assets/img/swipe.svg" />
+          <img class="zoom-finger" src="../../assets/img/zoom.svg" />
           <p class="zoom-text">
             <span>한 손가락을 움직여 확대합니다.</span>
             <span>Move one finger over the image to zoom in.</span>
           </p>
         </div>
         <div class="swipe">
-          <img class="swipe-finger-1" src="../../assets/img/zoom.svg" />
-          <img class="swipe-finger-2" src="../../assets/img/zoom.svg" />
+          <img class="swipe-finger-1" src="../../assets/img/swipe.svg" />
+          <img class="swipe-finger-2" src="../../assets/img/swipe.svg" />
 
           <p class="swipe-text">
             <span>양쪽을 탭하면 이전 / 다음 이미지를 볼 수 있습니다.</span>
