--- a/newflavorsoftea/1-1-cjh-c/index.html
+++ b/newflavorsoftea/1-1-cjh-c/index.html
@@ -148,7 +148,7 @@
     <section class="project__loading">
       <div class="load__info">
         <div class="zoom">
-          <img class="zoom-finger" src="../../assets/img/zoom.svg" />
+         <img class="zoom-finger" src="../../assets/img/zoom.svg" />
           <p class="zoom-text">
             <span>한 손가락을 움직여 확대합니다.</span>
             <span>Move one finger over the image to zoom in.</span>
@@ -159,8 +159,8 @@
           <img class="swipe-finger-2" src="../../assets/img/swipe.svg" />
 
           <p class="swipe-text">
-            <span>양쪽을 탭하면 이전 / 다음 이미지를 볼 수 있습니다.</span>
-            <span>Tap either side(left/right) to see the prev/next image.</span>
+            <span>화면 양쪽을 탭하면 이전 / 다음 이미지를 볼 수 있습니다.</span>
+            <span>Tap either side of the screen to see the prev/next image.</span>
           </p>
         </div>
 
