--- a/newflavorsoftea/1-1-kjh-t/index.html
+++ b/newflavorsoftea/1-1-kjh-t/index.html
@@ -159,8 +159,8 @@
           <img class="swipe-finger-2" src="../../assets/img/swipe.svg" />
 
           <p class="swipe-text">
-            <span>양쪽을 탭하면 이전 / 다음 이미지를 볼 수 있습니다.</span>
-            <span>Tap either side(left/right) to see the prev/next image.</span>
+            <span>화면 양쪽을 탭하면 이전 / 다음 이미지를 볼 수 있습니다.</span>
+            <span>Tap either side of the screen to see the prev/next image.</span>
           </p>
         </div>
 
