--- a/newflavorsoftea/1-1-kjh-p/index.html
+++ b/newflavorsoftea/1-1-kjh-p/index.html
@@ -164,7 +164,7 @@
           </p>
         </div>
 
-        <button>Skip</button>
+        <button>오늘 하루 보지 않기</button>
       </div>
     </section>
 
