--- a/newflavorsoftea/1-1-kjh-t/index.html
+++ b/newflavorsoftea/1-1-kjh-t/index.html
@@ -164,7 +164,7 @@
           </p>
         </div>
 
-        <button>오늘 하루 그만 보기</button>
+        <button>오늘 하루 그만 보기</button>
       </div>
     </section>
 
