--- a/newflavorsoftea/1-1-cjh-p/index.html
+++ b/newflavorsoftea/1-1-cjh-p/index.html
@@ -1530,7 +1530,7 @@
                 </p>
                 <div class="readmore__wrapper visible">
                   <div class="readmore__gradient"></div>
-                  <!-- <div class="readmore__button"></div> -->
+                  <div class="readmore__button">+</div>
                 </div>
               </div>
 
