--- a/index.html
+++ b/index.html
@@ -224,12 +224,18 @@
               <span class="item--projectname">
                 <p>1-1-cjh-C</p>
               </span>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;조장현</p>
+              </span>
             </a>
 
             <a href="./newflavorsoftea/1-1-cjh-p/" class="projectlist__item">
               <span class="item--projectnumber">03</span>
               <span class="item--projectname">
                 <p>1-1-cjh-P</p>
+              </span>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;조장현</p>
               </span>
             </a>
 
@@ -238,6 +244,9 @@
               <span class="item--projectname">
                 <p>1-1-cjh-T</p>
               </span>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;조장현</p>
+              </span>
             </a>
 
             <a href="./newflavorsoftea/1-1-hwk-c/" class="projectlist__item">
@@ -245,11 +254,27 @@
               <span class="item--projectname">
                 <p>1-1-hwk-C</p>
               </span>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;홍우경</p>
+              </span>
             </a>
             <a href="./newflavorsoftea/1-1-hwk-p/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
               <span class="item--projectname">
                 <p>1-1-hwk-P</p>
+              </span>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;홍우경</p>
+              </span>
+            </a>
+
+             <a href="./newflavorsoftea/1-1-hwk-t/" class="projectlist__item">
+              <span class="item--projectnumber">02</span>
+              <span class="item--projectname">
+                <p>1-1-hwk-T</p>
+              </span>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;홍우경</p>
               </span>
             </a>
 
@@ -258,17 +283,26 @@
               <span class="item--projectname">
                 <p>1-1-kjh-C</p>
               </span>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;김종훈</p>
+              </span>
             </a>
             <a href="./newflavorsoftea/1-1-kjh-p/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
                 <p>1-1-kjh-P</p>
               </span>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;김종훈</p>
+              </span>
             </a>
             <a href="./newflavorsoftea/1-1-kjh-t/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
                 <p>1-1-kjh-T</p>
+              </span>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;김종훈</p>
               </span>
             </a>
           </div>
@@ -597,7 +631,7 @@
               </div>
             </div>
           </div>
-  
+
           <div
             class="mix mapping__item"
             data-project="8"
