--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -192,32 +192,54 @@
               <span class="item--projectname">
                 <p>1-1-cjh-C</p>
               </span>
-            </a>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;조장현</p>
+              </span>
 
             <a href="../newflavorsoftea/1-1-cjh-p/" class="projectlist__item">
               <span class="item--projectnumber">03</span>
               <span class="item--projectname">
                 <p>1-1-cjh-P</p>
               </span>
-            </a>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;조장현</p>
+              </span>
 
             <a href="../newflavorsoftea/1-1-cjh-t/" class="projectlist__item">
               <span class="item--projectnumber">03</span>
               <span class="item--projectname">
                 <p>1-1-cjh-T</p>
               </span>
-            </a>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;조장현</p>
+              </span>
 
             <a href="../newflavorsoftea/1-1-hwk-c/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
               <span class="item--projectname">
                 <p>1-1-hwk-C</p>
               </span>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;홍우경</p>
+              </span>
             </a>
             <a href="../newflavorsoftea/1-1-hwk-p/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
               <span class="item--projectname">
                 <p>1-1-hwk-P</p>
+              </span>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;홍우경</p>
+              </span>
+            </a>
+
+            <a href="../newflavorsoftea/1-1-hwk-t/" class="projectlist__item">
+              <span class="item--projectnumber">02</span>
+              <span class="item--projectname">
+                <p>1-1-hwk-T</p>
+              </span>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;홍우경</p>
               </span>
             </a>
 
@@ -226,19 +248,25 @@
               <span class="item--projectname">
                 <p>1-1-kjh-C</p>
               </span>
-            </a>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;김종훈</p>
+              </span>
             <a href="../newflavorsoftea/1-1-kjh-p/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
                 <p>1-1-kjh-P</p>
               </span>
-            </a>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;김종훈</p>
+              </span>
             <a href="../newflavorsoftea/1-1-kjh-t/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
                 <p>1-1-kjh-T</p>
               </span>
-            </a>
+              <span class="item--projectname">
+                <p>&nbsp;&nbsp;김종훈</p>
+              </span>
           </div>
 
           <!-- <div class="header__menutoggle__lang language__item visible de">
